2005-03-21  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpink.c: changed time-smoother code to use guint32
	time values externally, guint64 internally. Proper fix for bug
	#164272.

2005-03-21  Sven Neumann  <sven@gimp.org>

	* app/actions/dialogs-actions.h: bail out if
	widgets/gimpactiongroup.h has not been included beforehand.

	* app/actions/actions.c: include widgets/gimpactiongroup.h. Fixes
	build with amd64/gcc-4.0 (Debian bug report #300227).

2005-03-21  Sven Neumann  <sven@gimp.org>

	* etc/controllerrc: fixed defaults for mouse wheel controller (bug
	#171083, fix spotted by Michael Schumacher).

2005-03-21  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_constructor): disable search for tree
	views so that treeview typeahead doesn't collide with global
	accelerators. Fixes bug #169339 and would suck less if bug #170435
	was fixed.

2005-03-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-utils.[ch]: changed all transform
	utilities to modify the passed transform matrix instead of
	creating a new one.

	* app/text/gimptextlayer-transform.c
	* app/tools/gimpperspectivetool.c
	* app/tools/gimprotatetool.c
	* app/tools/gimpscaletool.c
	* app/tools/gimpsheartool.c
	* app/vectors/gimpvectors.c
	* tools/pdbgen/pdb/drawable_transform.pdb
	* tools/pdbgen/pdb/transform_tools.pdb: changed accordingly.

	* app/pdb/drawable_transform_cmds.c
	* app/pdb/transform_tools_cmds.c: regenerated.

2005-03-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icosave.c (ico_create_palette): fixed parameter
	check, NULL is valid for an empty palette. Fixes bug #170812.

2005-03-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c (gimp_image_convert): added missing
	period in newly added message.

	* app/dialogs/convert-dialog.c (convert_dialog_palette_filter): don't
	show empty palettes (bug #170973).

2005-03-21  Michael Natterer  <mitch@gimp.org>
